Profile view-read/Edit view

--- a/front-end/src/app/components/profile/about/about.component.html
+++ b/front-end/src/app/components/profile/about/about.component.html
@@ -14,7 +14,7 @@
     <div class="social-circle"><i class="fab fa-facebook"></i></div>
     <div class="social-circle"><i class="fab fa-linkedin-in"></i></div>
   </div>
-  <form class="form" hidden>
+  <form class="form">
     <div class="inputs">
       <p>
         <input class="form-input first-name" type="text" placeholder="First Name">
