--- a/front-end/src/app/components/profile/education/education.component.html
+++ b/front-end/src/app/components/profile/education/education.component.html
@@ -1,4 +1,7 @@
-<div class="section-header-text">Education</div>
+
+<div class="section-header-text imgalign">Education
+  <i class="fas fa-plus "></i>
+</div>
 <div class="eduSection">
   <label class="date-text education-date">Jan 2016 - Dec 2017</label>
   <div class="econtent">
