--- a/front-end/src/app/components/profile/about/about.component.css
+++ b/front-end/src/app/components/profile/about/about.component.css
@@ -1,15 +1,15 @@
-.mainDiv{
+.mainDiv {
 display: flex;
 flex-direction: column;
-margin:25px;
+margin: 25px;
 }
-.social-icons{
+.social-icons {
     /* border: 1px dashed lime; */
     display: flex;
     justify-content: right;
     margin-bottom: 20px;
 }
-.social-circle{
+.social-circle {
     height: 35px;
     width: 35px;
     background-color: rgb(88, 86, 86);
@@ -20,38 +20,38 @@ margin:25px;
     color: white; 
     margin: 0px 20px;
 }
-.inputs{
+.inputs {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; */
     grid-template-areas: 
-    "fname fname fname lname lname ."
+    "fname fname fname lname lname lname"
     ". title title title title ."
     ". create create create create ."
     ". confirm confirm confirm confirm ."
-    ". city city city state ."
+    ". city city city state .";
 }
-.first-name{
+.first-name {
     grid-area: fname;
 }
-.last-name{
+.last-name {
     grid-area: lname;
 }
-.tile{
+.tile {
     grid-area: title;
 }
-.create{
+.create {
     grid-area: create;
 }
-.confirm{
+.confirm {
     grid-area: confirm;
 }
 .city{
     grid-area: city;
 }
 .state{
-    grid-area: state
+    grid-area: state;
 }
 strong{
     color:rgba(255,184,8,0.85);
