--- a/front-end/src/app/components/profile/experience/experience.component.html
+++ b/front-end/src/app/components/profile/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div class="section-header-text">Experience </div>
+<div class="section-header-text" id="experience">Experience </div>
 <div class="expSection"><label class="date-text exp-date">Mar 2018 - Current</label>
   <div class="econtent">
     <h3 class="subhead-1-text ">Shift3 - Fresno</h3>
