--- a/front-end/src/app/components/profile/navbar/navbar.component.html
+++ b/front-end/src/app/components/profile/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <ul class="nav-text">
         <li><a href="#">About</a></li>
         <li><a href="#">Education</a></li>
-        <li><a href="#">Experience</a></li>
+        <li><a href="app-experience/#experience">Experience</a></li>
         <li><a href="#">Project</a></li>
         <li><a href="#">Skills</a></li>
         <li><a href="#">Awards</a></li>
