--- a/front-end/src/app/components/profile/education/education.component.html
+++ b/front-end/src/app/components/profile/education/education.component.html
@@ -1,6 +1,6 @@
 
-<div class="section-header-text imgalign">Education
-  <i class="fas fa-plus "></i>
+<div class="section-header-text imgalign"id="education">Education
+  
 </div>
 <div class="eduSection">
   <label class="date-text education-date">Jan 2016 - Dec 2017</label>
@@ -20,12 +20,11 @@
       odio in fuga, eaque commodi voluptate obcaecati dignissimos quae illo officia autem!</p>
   </div>
 </div>
-<div ng-app="" hidden>
-  <p><input type="text" ng-model="institute-name" placeholder="Name of Institution"></p>
-  <p>
-    <input type="text" ng-model="fieldOfStudy" placeholder="Field of Study">
-    <select name="degreeSelect" id="degreeSelect" ng-model="data.degreeSelect">
-      <option>----Degree---</option>
+<div>
+  <p><input type="text" placeholder="Name of Institution"></p>
+  <p><input type="text" placeholder="Field of Study">
+    <select name="degreeSelect" placeholder="Degree">
+      
       <option>Masters</option>
       <option>Under Graduate</option>
       <option>High School</option>
