--- a/front-end/src/app/components/profile/navbar/navbar.component.html
+++ b/front-end/src/app/components/profile/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <img class="img-round" src="../../../../assets/img/ProfilePic.JPG" alt="">
     <ul class="nav-text">
         <li><a href="#">About</a></li>
-        <li><a href="#">Education</a></li>
-        <li><a href="app-experience/#experience">Experience</a></li>
+        <li><a href="app-profile/#12">Education</a></li>
+        <li><a href="app-profile/#13">Experience</a></li>
         <li><a href="#">Project</a></li>
         <li><a href="#">Skills</a></li>
         <li><a href="#">Awards</a></li>
