--- a/front-end/src/app/components/profile/profile.component.html
+++ b/front-end/src/app/components/profile/profile.component.html
@@ -4,10 +4,13 @@
   </div>
   <div class="content">
     <app-about></app-about>
-    <app-education></app-education>
-    <app-experience></app-experience>
+    <div id="12">
+    <app-education ></app-education>
+  </div>
+    <app-experience id="13"></app-experience>
     <app-projects></app-projects>
     <!-- <app-skills></app-skills> -->
     <app-achievements></app-achievements>
   </div>
+  <router-outlet></router-outlet>
 </div>
