--- a/front-end/src/app/components/profile/about/about.component.html
+++ b/front-end/src/app/components/profile/about/about.component.html
@@ -1,29 +1,28 @@
-<section  id="about-section">
-<div class="mainDiv">
-  <h1 class="name-text">Dude
-    <strong >Person </strong>
-  </h1>
-  <h2 class="title-text">Developer </h2>
-  <label>Fresno, CA 00000 [555]555-5555 dudeperson@dude.com <a href="#">superdudews.com</a></label>
-  <p class="body-text">Administrative Assistant with +3 years of experience in a 
-    sensitive corporate environment. Outgoing and detail-oriented, I am proficient at building
-     and maintaining professional relationships. Have an Associate's Degree in Office Administration.
-  </p>
-  <div class="social-icons">
-    <div class="social-circle"><i class="fab fa-twitter"></i></div>
-    <div class="social-circle"><i class="fab fa-facebook"></i></div>
-    <div class="social-circle"><i class="fab fa-linkedin-in"></i></div>
-  </div>
-  <form class="form">
-    <div class="btn">
-      <button >&times;</button>
+<section id="about-section">
+  <div class="mainDiv">
+    <h1 class="name-text">Dude <strong>Person </strong></h1>
+    <h2 class="title-text">Developer</h2>
+    <label>Fresno, CA 00000 [555]555-5555 dudeperson@dude.com
+      <a href="#">superdudews.com</a>
+    </label>
+    <p class="body-text">Administrative Assistant with +3 years of experience in a sensitive corporate environment. Outgoing and detail-oriented,
+      I am proficient at building and maintaining professional relationships. Have an Associate's Degree in Office Administration.
+    </p>
+    <div class="social-icons">
+      <div class="social-circle"><i class="fab fa-twitter"></i></div>
+      <div class="social-circle"><i class="fab fa-facebook"></i></div>
+      <div class="social-circle"><i class="fab fa-linkedin-in"></i></div>
     </div>
-    <div class="inputs">
+    <form class="form">
+      <div class="btn">
+        <button>&times;</button>
+      </div>
+      <div class="inputs">
         <input class="form-input first-name" type="text" placeholder="First Name">
         <input class="form-input last-name" type="text" placeholder="Last Name">
         <input class="form-input title" type="text" placeholder="Title">
         <input class="form-input city" placeholder="City">
-        <select  class="state" name="State" id="state" >
+        <select class="state" name="State" id="state">
           <option selected="selected">State</option>
           <option value="AL">Alabama</option>
           <option value="AK">Alaska</option>
@@ -76,27 +75,36 @@
           <option value="WV">West Virginia</option>
           <option value="WI">Wisconsin</option>
           <option value="WY">Wyoming</option>
-      </select>
+        </select>
         <input type="text" class="form-input phone" placeholder="Phone">
-        
         <input type="text" class="form-input email" placeholder="Email">
         <input type="text" class="form-input website" placeholder="Website">
         <textarea class="textarea-styled addDesc" type="text" maxlength="500" placeholder="Tell the World a Little About You!"></textarea>
-      <!-- <div>
-      <label>Social Media </label>
-      
-      <input type="text" ng-model="twitter" placeholder="Twitter">
-      
-      <input type="text" ng-model="linkedIn" placeholder="LinkedIn">
-      
-      <input type="text" ng-model="faceBook" placeholder="Facebook">
-    </div> -->
-    
+      </div>
+      <div class="button-section">
+        <button>Save!</button>
+      </div>
+    </form>
+    <div class="form ">
+      <div class="btn">
+        <span class="close"></span>
+        <button>&times;</button>
+      </div>
+      <div class="title-section ">Social Media</div>
+      <div class="social">
+        <p>
+          <input class="form-input" type="text" placeholder="eg:Twitter">
+        </p>
+        <p>
+          <input class="form-input" type="text" placeholder="eg:LinkedIn">
+        </p>
+        <p>
+          <input class="form-input" type="text" placeholder="eg:Facebook">
+        </p>
+      </div>
+      <div class="button-section">
+        <button>Save!</button>
+      </div>
     </div>
-    <div class="button-section">
-      <button>Save!</button>
-    </div>
-    
-  </form>
-</div>
+  </div>
 </section>
