--- a/front-end/src/app/components/profile/education/education.component.css
+++ b/front-end/src/app/components/profile/education/education.component.css
@@ -1,11 +1,20 @@
 /* div {
   margin: 5px;
 } */
+
 .eduSection {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-areas: "eDate econtent econtent econtent";
+}
+.btn{
+  text-align: right;
+  padding: 5px 5px;
+
+}
+.form{
+  margin-bottom: 100px;
 }
 p {
   /* margin: 10px; */
