--- a/front-end/src/app/components/home/register/register.component.html
+++ b/front-end/src/app/components/home/register/register.component.html
@@ -54,7 +54,7 @@
         <option value="RI">Rhode Island</option>
         <option value="SC">South Carolina</option>
         <option value="SD">South Dakota</option>
-        <option value="TN">Tennessee</option>
+        <option value="TN">Tennessee</option>pro
         <option value="TX">Texas</option>
         <option value="UT">Utah</option>
         <option value="VT">Vermont</option>
