--- a/front-end/src/app/components/profile/profile.component.css
+++ b/front-end/src/app/components/profile/profile.component.css
@@ -11,13 +11,13 @@
     position: fixed;
     grid-area: nav;
     background-color: #424242;
-    z-index: -1;
+    /* z-index: -1; */
     width: 25%;
 } 
 .content{
     grid-area: co;
     /* border: 1px dashed red; */
-    z-index: -1;
+    /* z-index: -1; */
     margin: 0px 20px;
 }
 .skills-container{
@@ -30,7 +30,7 @@
     height: 100%;
     background-color: #fff;
     opacity: 0.9;
-    z-index: 1;
+   z-index: 1;
     display: none;
 }
 h1 {
