--- a/front-end/src/app/components/profile/education/education.component.css
+++ b/front-end/src/app/components/profile/education/education.component.css
@@ -30,14 +30,17 @@ p {
   display: flex;
 }
 .inputs {
-  /* //margin: 15px; */
+  margin: 15px; 
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr  1fr 1fr 1fr 1fr;
   /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr; */
   grid-template-areas: 
-  "eduLabel eduLabel . . . ."
-  "edustartMonth edustartYear . . . .";
+  "eduLabel eduLabel  . . ."
+  "edustartMonth edustartYear  insName insName insName"
+  "current .  study study degree"
+  ". .  eduText eduText eduText";
+  
 }
 .eduLabel {
   grid-area: eduLabel;
@@ -73,4 +76,18 @@ p {
   color: #fff;
   width: 100%;
   height: 100%;
+}
+.button-section{
+  text-align: center;
+  padding: 10px 0px 10px 0px;
+}
+button{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 13pt;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: #fff;
+  border: none;
+  color: #757575;
+  cursor: pointer;
 }
