--- a/front-end/src/app/components/profile/education/education.component.html
+++ b/front-end/src/app/components/profile/education/education.component.html
@@ -26,50 +26,33 @@
     </div>
     <div class="inputs">
       <h4 class="form-input-label eduLabel">Date of Completion</h4>
-      <p><select class="edustartMonth" name="monthEnd">
-          <option>MM</option>
-          <option>Jan</option>
-          <option>Feb</option>
-          <option>March</option>
-        </select>
-        <select class="edustartYear" name="yrEnd">
-          <option>YYYY</option>
-          <option>2000</option>
-          <option>2001</option>
-          <option>2002</option>
-        </select>
-      </p>
-
-    </div>
-    <!-- <div class="close-modal-btn">
-      <i class="fas fa-times close-btn"></i>
-    </div>
-    <div class="inputs">
-     <p><label  class="eduLabel">Date of completion</label> </p>
-     <p><select class="edustartMonth" name="monthEnd">
-          <option>MM</option>
-          <option>Jan</option>
-          <option>Feb</option>
-          <option>March</option>
-        </select>
-        <select class="edustartYear" name="yrEnd">
-          <option>YYYY</option>
-          <option>2000</option>
-          <option>2001</option>
-          <option>2002</option>
-        </select>
-      </p>
-    <p><input type="text" class="form-input insName" placeholder="Name of Institution"></p>
-    <p class="current">Current : <input type="checkbox"></p>
-    <p><input type="text" class="form-input Study" placeholder="Field of Study">
-        <select name="degreeSelect" class="degree" placeholder="Degree">
-          <option>Masters</option>
-          <option>Under Graduate</option>
-          <option>High School</option>
+      <select class="edustartMonth" name="monthEnd">
+        <option>MM</option>
+        <option>Jan</option>
+        <option>Feb</option>
+        <option>March</option>
       </select>
-     <p>
-        <textarea type="text" class="eduText" maxlength="500" placeholder="Additional info (Optional)"></textarea>
-      </p>
-    </div> -->
+      <select class="edustartYear" name="yrEnd">
+        <option>YYYY</option>
+        <option>2000</option>
+        <option>2001</option>
+        <option>2002</option>
+      </select>
+      <input type="text" class="form-input insName" placeholder="Name of Institution">
+      <div class="current">
+        <input type="checkbox" class="current">
+        <label class="form-input-label">Current :</label>
+      </div>
+      <input type="text" class="form-input study" placeholder="Field of Study">
+      <select name="degreeSelect" class="degree" placeholder="Degree">
+        <option>Masters</option>
+        <option>Under Graduate</option>
+        <option>High School</option>
+      </select>
+      <textarea type="text" class="textarea-styled eduText" maxlength="500" placeholder="Additional info (Optional)"></textarea>
+    </div>
+    <div class="button-section">
+      <button>Save!</button>
+    </div>
   </form>
 </div>
