--- a/front-end/src/app/components/profile/education/education.component.html
+++ b/front-end/src/app/components/profile/education/education.component.html
@@ -40,7 +40,7 @@
       </select>
       <input type="text" class="form-input insName" placeholder="Name of Institution">
       <div class="current">
-        <input type="checkbox" class="current">
+        <input type="checkbox">
         <label class="form-input-label">Current :</label>
       </div>
       <input type="text" class="form-input study" placeholder="Field of Study">
