--- a/front-end/src/app/components/profile/experience/experience.component.html
+++ b/front-end/src/app/components/profile/experience/experience.component.html
@@ -1,5 +1,14 @@
+<div class="header">
+    <div class="edit-btn-cont" (click)="showExperienceModal()"> 
+        <i class="fas fa-edit edit-icon"></i>
+    </div>
+    <i class="fas fa-eye eye-icon"></i>
+    <h1 class="section-header-text">Skills</h1>
+</div>
+
 <div class="section-header-text" id="experience">Experience </div>
-<div class="expSection"><label class="date-text exp-date">Mar 2018 - Current</label>
+<div class="expSection">
+  <label class="date-text exp-date">Mar 2018 - Current</label>
   <div class="econtent">
     <h3 class="subhead-1-text ">Shift3 - Fresno</h3>
     <h4 class="subhead-2-text ">UI designer</h4>
@@ -15,37 +24,4 @@
     <p class="body-text ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis numquam, ipsum sint iusto vero temporibus unde harum at
       odio in fuga, eaque commodi voluptate obcaecati dignissimos quae illo officia autem!</p>
   </div>
-</div>
-<div ng-app="" hidden>
-  <p>Experience: </p>
-  <p><input type="text" ng-model="institute-name" placeholder="Name of Institution"></p>
-  <p><input type="text" ng-model="fieldOfStudy" placeholder="Field of Study">
-    <select name="degreeSelect" id="degreeSelect" ng-model="data.degreeSelect">
-      <option>----Degree---</option>
-      <option>Masters</option>
-      <option>Under Graduate</option>
-      <option>High School</option>
-    </select>
-    <br>
-    <p>
-      <label>Date of completion</label>
-      <br>
-      <select name="datestart" id="datestart" ng-model="data.dateStart">
-        <option>MM</option>
-        <option>Jan</option>
-        <option>Feb</option>
-        <option>March</option>
-      </select>
-      <select name="endstart" id="endstart" ng-model="data.endStart">
-        <option>YYYY</option>
-        <option>2000</option>
-        <option>2001</option>
-        <option>2002</option>
-      </select>
-    </p>
-    <label>Current :
-      <input type="checkbox" ng-model="current">
-    </label>
-    <br/>
-    <p><textarea type="text" ng-model="addiInfo" maxlength="500" placeholder="Additional info (Optional)"></textarea> </p>
 </div>
