--- a/front-end/src/app/components/profile/achievements/achievements.component.html
+++ b/front-end/src/app/components/profile/achievements/achievements.component.html
@@ -1,5 +1,13 @@
-<div><h1 class="section-header-text">Awards</h1></div>
-<div class="achSection"><label class="date-text exp-date">Mar 2018</label>
+<div >
+<div>
+  <div class="edit-btn-cont" (click)="showAchieveModal()"> 
+        <i class="fas fa-edit edit-icon"></i> 
+  </div>
+  <i class="fas fa-eye eye-icon"></i>
+  <h1 class="section-header-text">Awards</h1>
+</div>
+<div class="achSection">
+  <label class="date-text exp-date">Mar 2018</label>
   <div class="econtent">
     <h3 class="subhead-1-text ">Boo Brilliant Designer</h3>
     <p class="body-text ">mmodi voluptate obcaecati dignissimos quae illo officia autem!</p>
@@ -12,34 +20,32 @@
     <p class="body-text ">Lorem ipsum doptate obcaecati dignissimos quae illo officia autem!</p>
   </div>
 </div>
-
-
-
-<div ng-app="" hidden>
-
-  <p>Awards: </p>
-  <p>
-    <input type="text" ng-model="awards" placeholder="Awards or Achievements">
-  </p>
-  <p>
-    <label>Date of Reciept : </label>
-    <br>
-    <select name="awdmonth" id="awdmonth" ng-model="data.awdmonth">
-      <option>MM</option>
-      <option>Jan</option>
-      <option>Feb</option>
-      <option>March</option>
-    </select>
-    <select name="awdyr" id="awdyr" ng-model="data.awdyr">
-      <option>YYYY</option>
-      <option>2000</option>
-      <option>2001</option>
-      <option>2002</option>
-    </select>
-  </p>
-  <p>
-    <textarea type="text" ng-model="addiInfo" maxlength="500" placeholder="Additional info (Optional)"></textarea>
-  </p>
-
-
 </div>
+<!-- <form class="form">
+  <div>
+    <div class="close-modal-btn">
+      <i class="fas fa-times close-btn"></i>
+    </div>
+    <div class="inputs">
+        <h4 class="form-input-label awardReciept">Date of reciept</h4>
+        <select name="awardMonth" class="awardMonth">
+            <option>MM</option>
+            <option>Jan</option>
+            <option>Feb</option>
+            <option>March</option>
+          </select>
+          <select name="awardYear" class="awardYear">
+            <option>YYYY</option>
+            <option>2000</option>
+            <option>2001</option>
+            <option>2002</option>
+          </select>
+          <input type="text" class="form-input awardTitle" placeholder="Awards or Achievements Title">
+          <textarea type="text" class="textarea-styled addInfo" maxlength="500" placeholder="Additional info (Optional)"></textarea>
+    </div>
+  
+  </div>
+  <div class="button-section">
+      <button>Save!</button>
+    </div>
+</form> -->
