--- a/front-end/src/app/components/profile/experience/experience.component.css
+++ b/front-end/src/app/components/profile/experience/experience.component.css
@@ -1,6 +1,31 @@
 /* div {
     margin:5px;
 } */
+.close-modal-btn{
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+    margin: 10px;
+  }
+  .close-btn{
+    color: #fff;
+    width: 100%;
+    height: 100%;
+  }
+  .inputs {
+  margin: 25px; 
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr  1fr 1fr 1fr 1fr;
+  grid-template-areas: 
+  "expStartLabel . . . ."
+  "startMonth startYear companyName companyName companyName"
+  "expEndLabel expEndLabel title title title "
+  "endMonth endYear . . ."
+  "current . addInfo addInfo addInfo";
+
+  
+}
 .expSection{
     display: grid;
     grid-gap: 10px; 
@@ -18,3 +43,47 @@ p{
 .exp-date{
     grid-area:eDate;
 }
+.expStartLabel {
+    grid-area: expStartLabel;
+}
+.expEndLabel {
+    grid-area: expEndLabel;
+}
+.startMonth {
+    grid-area: startMonth;
+}
+.startYear {
+    grid-area: startYear;
+}
+.endMonth {
+    grid-area: endMonth;
+}
+.endYear {
+    grid-area: endYear;
+}
+.companyName {
+    grid-area: companyName;
+}
+.title {
+    grid-area: title;
+}
+.current {
+    grid-area: current;
+}
+.addInfo {
+    grid-area: addInfo;
+}
+.button-section{
+    text-align: center;
+    padding: 10px 0px 10px 0px;
+  }
+  button{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 13pt;
+    padding: 5px 15px;
+    border-radius: 5px;
+    background-color: #fff;
+    border: none;
+    color: #757575;
+    cursor: pointer;
+  }
