--- a/front-end/src/app/components/profile/profile.component.css
+++ b/front-end/src/app/components/profile/profile.component.css
@@ -31,6 +31,22 @@
     display: none;
     /* opacity: 0; */
 }
+.popup-achievment {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 1;
+    display: none;
+}
+.popup-experience {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 1;
+    display: none;
+}
 h1 {
   height: 25vh;
 }
@@ -98,3 +114,57 @@ h1 {
     cursor: pointer;
     color: #fff;
 }
+.achievement-inputs {
+    margin: 15px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    "awardReciept . . ."
+    "awardMonth awardYear awardTitle awardTitle"
+    ". . addInfo addInfo";
+}
+/* Awards CSS */
+.close-modal-btn {
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+  margin: 10px;
+}
+.close-btn {
+  color: #fff;
+  width: 100%;
+  height: 100%;
+}
+.button-section {
+  text-align: center;
+  padding: 10px 0px 10px 0px;
+}
+button {
+  font-family: "Montserrat", sans-serif;
+  font-size: 13pt;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: #fff;
+  border: none;
+  color: #757575;
+  cursor: pointer;
+}
+.awardReciept {
+    grid-area: awardReciept;
+}
+.awardMonth {
+    grid-area: awardMonth;
+    width: 80%;
+}
+.awardYear {
+    grid-area: awardYear;
+    width: 80%;
+}
+.awardTitle {
+    grid-area: awardTitle;
+}
+.addInfo{
+    grid-area: addInfo;
+}
+/* Experience Popup */
