--- a/front-end/src/app/components/profile/skills/skills.component.html
+++ b/front-end/src/app/components/profile/skills/skills.component.html
@@ -3,6 +3,7 @@
         <div class="edit-btn-cont" (click)="showModal()"> 
             <i class="fas fa-edit edit-icon"></i>
         </div>
+        <i class="fas fa-eye eye-icon"></i>
         <h1 class="section-header-text">Skills</h1>
     </div>
     <div class="programming-section">
